Fixed: flex bug on IE

--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -23,7 +23,7 @@ h6
   font-weight: normal
 
 #content-outer
-  flex: 1
+  flex: 1 auto
 
 *
   box-sizing: border-box
